--- a/map.css
+++ b/map.css
@@ -65,3 +65,19 @@ body{
     display: block;
 }
 
+.info2{
+    position: absolute;
+    padding: 10px;
+    margin: 0;
+    top: 10px;
+    right: 10px;
+    width: 250px;
+    height: auto;
+    border: 2px solid black;
+    border-radius: 10px;
+    background-color: azure;
+    text-align: center;
+    font-family: Consolas, monospace;
+    font-size: 20px;
+    user-select: none;
+}
